# abs_worker

./: .env.example  .gitignore  AUDIT.md  CLAUDE.md  INTEGRATION_TEST_AUDIT.md  Makefile  README.md  audit_06.md  audit_15.md  audit_16.md  audit_4.md  audit_5.md  pyproject.toml
docs/orm_reference/: MODELS_REFERENCE.md  README.md  REPOSITORIES_REFERENCE.md  USAGE_EXAMPLES.md
examples/: 01_basic_usage.py  02_nft_minting.py  03_status_monitoring.py  04_complete_api_integration.py  05_batch_operations.py  README.md  example_config.py
src/abs_worker/: __init__.py  certificates.py  config.py  error_handler.py  monitoring.py  notarization.py  tasks.py
tests/: conftest.py  test_certificates.py  test_config.py  test_error_handler.py  test_factories_example.py  test_monitoring.py  test_notarization.py
tests/factories/: README.md  __init__.py  api_key_factory.py  base_factory.py  document_factory.py  user_factory.py
tests/integration/: test_notarization_integration.py
tests/mocks/: README.md  __init__.py  factories.py  mock_blockchain.py  mock_orm.py  mock_utils.py
tests/unit/: test_certificates.py  test_mocks.py
